[tool.poetry]
name = "enigma"
version = "0.1.0"
description = "Enigma emulator"
authors = ["Luke Shiner <luke@lukeshiner.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/lukeshiner/enigma"
repository = "https://github.com/lukeshiner/enigma"

keywords = ["enigma", "cryptography"]

classifiers = [
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Natural Language :: English",
    "Topic :: Utilities",
    "Topic :: Other/Nonlisted Topic",
]

[tool.poetry.dependencies]
python = ">=3.6.2,<4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^4.0.1"
coveralls = "^3.3.1"
pytest-cov = "^3.0.0"
isort = "^5.10.1"
mypy = "^0.931"
black = "^22.1"
flake8-docstrings = "^1.6.0"

[tool.pytest.core]
addopts = "--cov=.--cov-report=html"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

