[tool.poetry]
name = "enigma"
version = "0.2.0"
description = "Enigma emulator"
authors = ["Luke Shiner <luke@lukeshiner.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/lukeshiner/enigma"
repository = "https://github.com/lukeshiner/enigma"

keywords = ["enigma", "cryptography"]

classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Natural Language :: English",
    "Topic :: Utilities",
    "Topic :: Other/Nonlisted Topic",
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.3.0"
isort = "^6.0.1"
flake8-bugbear = "^24.12.12"
flake8-docstrings = "^1.7.0"
pytest = "^8.4.1"
pytest-cov = "^7.0.0"
pytest-integration = "^0.2.3"

[tool.pytest.core]
addopts = "--cov=.--cov-report=html"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

